plugins {
    id 'java-library'
    id 'java-gradle-plugin'
    id 'com.vanniktech.maven.publish' version '0.30.0'
}

group 'de.redsix'
description 'Gradle Plugin for the DMN analysis tool dmn-check'
version '1.5.0-SNAPSHOT'


java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation group: 'de.redsix', name: 'dmn-check-plugin-base', version: project.version

    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
}

gradlePlugin {
    plugins {
        simplePlugin {
            id = 'de.redsix.dmn-check.gradle-plugin'
            implementationClass = 'de.redsix.dmncheck.DmnCheckGradlePlugin'
        }
    }
}

javadoc {
    if (JavaVersion.current().isJava9Compatible()) {
        options.addBooleanOption('html5', true)
    }
}

tasks.withType(AbstractArchiveTask).configureEach {
    preserveFileTimestamps = false
    reproducibleFileOrder = true
}

import com.vanniktech.maven.publish.SonatypeHost

mavenPublishing {
    publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL, true)
    signAllPublications()

    pom {
        name = project['name']
        description = project['description']
        url = 'https://github.com/red6/dmn-check'
        licenses {
            license {
                name = 'The Apache License, Version 2.0'
                url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
            }
        }
        developers {
            developer {
                name = 'Pascal Wittmann'
            }
        }
        scm {
            connection = 'scm:git:github.com/red6/dmn-check'
            developerConnection = 'scm:git:github.com/red6/dmn-check'
            url = 'https://github.com/red6/dmn-check'
        }
    }
}
